# linear-walkthrough

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
linear_walkthrough/: cli.py  renderer.py  server.py  template.py
linear_walkthrough/templates/: page.html  page_interactive.html
skills/linear-walkthrough/: SKILL.md
