[project]
name = "linear-walkthrough"
version = "0.2.0"
description = "Generate GitHub-styled HTML walkthroughs from markdown"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Uptick", email = "dev@uptickhq.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "markdown-it-py[plugins]",
    "minijinja>=2.17.1",
    "pygments",
]

[project.scripts]
linear-walkthrough = "linear_walkthrough.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
